<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ezrassor_keyboard_interfaces</name>
  <version>2.0.0</version>
  <description>Encode keyboard information for the EZRASSOR.</description>
  <url type="website">
    https://github.com/FlaSpaceInst/ezrassor_keyboard_interfaces
  </url>
  <maintainer email="ez.rassor@gmail.com">EZRASSOR Team</maintainer>
  <author email="ez.rassor@gmail.com">EZRASSOR Team</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
